--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.recompensa.CrearRecompensaActivity"></activity>
+        <activity android:name=".activities.recompensa.ReclamosActivity"></activity>
+        <activity android:name=".activities.recompensa.CrearRecompensaActivity" />
         <activity android:name=".activities.recompensa.RecompensaActivity" />
         <activity android:name=".activities.actividad.ActividadesCreadasActivity" />
         <activity android:name=".activities.familia.MiGrupoFamiliarActivity" />
